syntax = "proto3";

package server;

option go_package = "server.proto";


message Counter {
   string key = 1;
   int64 value = 2;
}

message Gauge {
   string key = 1;
   double value = 2;
}


message UpdateMetricsRequest {
    repeated Counter counter = 1;
    repeated Gauge gauge = 2;
}

message UpdateMetricsResponse {
    string error = 1;
}

service Metric {
  rpc UpdateMetrics(UpdateMetricsRequest) returns (UpdateMetricsResponse);
} 